[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/UI/Pause.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/UI/Adventurer.ttf"

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Assets/UI/Adventurer.ttf"

[sub_resource type="DynamicFont" id=4]
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Assets/UI/Adventurer.ttf"

[sub_resource type="DynamicFont" id=6]
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://Assets/UI/Adventurer.ttf"

[sub_resource type="DynamicFont" id=8]
font_data = SubResource( 7 )

[node name="Pause" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopUpLayer" type="ColorRect" parent="."]
margin_right = 320.0
margin_bottom = 160.0
color = Color( 0.356863, 0.345098, 0.345098, 0.54902 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PopUpLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -74.0
margin_top = -51.5
margin_right = 74.0
margin_bottom = 51.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer4" type="CenterContainer" parent="PopUpLayer/VBoxContainer"]
margin_right = 164.0
margin_bottom = 31.0

[node name="Pause" type="Label" parent="PopUpLayer/VBoxContainer/CenterContainer4"]
margin_right = 164.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 2 )
text = "Option Menu"

[node name="CenterContainer" type="CenterContainer" parent="PopUpLayer/VBoxContainer"]
margin_top = 35.0
margin_right = 164.0
margin_bottom = 57.0

[node name="Resume" type="Button" parent="PopUpLayer/VBoxContainer/CenterContainer"]
margin_left = 48.0
margin_right = 116.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.941176, 0.490196, 0.0509804, 1 )
custom_colors/font_color_hover = Color( 0.0470588, 0.0705882, 0.741176, 1 )
text = "Resume"
flat = true

[node name="CenterContainer2" type="CenterContainer" parent="PopUpLayer/VBoxContainer"]
margin_top = 61.0
margin_right = 164.0
margin_bottom = 83.0

[node name="Return" type="Button" parent="PopUpLayer/VBoxContainer/CenterContainer2"]
margin_left = 2.0
margin_right = 162.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.941176, 0.490196, 0.0509804, 1 )
custom_colors/font_color_hover = Color( 0.0470588, 0.0705882, 0.741176, 1 )
text = "Return to main menu"
flat = true

[node name="CenterContainer3" type="CenterContainer" parent="PopUpLayer/VBoxContainer"]
margin_top = 87.0
margin_right = 164.0
margin_bottom = 109.0

[node name="Exit" type="Button" parent="PopUpLayer/VBoxContainer/CenterContainer3"]
margin_left = 41.0
margin_right = 122.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.941176, 0.490196, 0.0509804, 1 )
custom_colors/font_color_hover = Color( 0.0470588, 0.0705882, 0.741176, 1 )
text = "Exit game"
flat = true

[connection signal="pressed" from="PopUpLayer/VBoxContainer/CenterContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="PopUpLayer/VBoxContainer/CenterContainer2/Return" to="." method="_on_Return_pressed"]
[connection signal="pressed" from="PopUpLayer/VBoxContainer/CenterContainer3/Exit" to="." method="_on_Exit_pressed"]
